fix(YC-63): fix leagues slider swipe visible

--- a/src/features/leagues-slider/styles.module.scss
+++ b/src/features/leagues-slider/styles.module.scss
@@ -4,18 +4,22 @@
   position: relative;
 
   &::before {
-    @include pseudo-arrow(87%, 1, -135deg)
+    @include pseudo-arrow(87%, 1, -135deg);
   }
 
   &::after {
-    @include pseudo-arrow(5%, 1)
+    @include pseudo-arrow(5%, 1);
   }
 }
 
 .slider {
-  width: 100%;
+  width: 50%;
+  margin: 0 auto;
   display: flex;
   overflow-x: auto;
+
+  // для управления прокруткой сенсорных устройств в веб-кит-основанных браузерах
+  // touch: Включает моментальную прокрутку с инерцией
   -webkit-overflow-scrolling: touch;
 
   // устанавливает, насколько строго применяются точки привязки к контейнеру прокрутки
